# gazebo_panda

./: README.md  UPDATE_LOG
camera_perception/: CMakeLists.txt  package.xml
camera_perception/camera_perception/: __init__.py  aruco_detector.py  aruco_mover.py
camera_perception/launch/: aruco_demo.launch.py  aruco_detector.launch.py  aruco_mover.launch.py
moveit_control/: CMakeLists.txt  README.md  package.xml
moveit_control/include/moveit_control_gui/: main_window.hpp
moveit_control/launch/: moveit_control.launch.py
moveit_control/src/: moveit_control_gui.cpp
panda/: CMakeLists.txt  model.config  package.xml
panda/config/: panda.rviz  ros2_controllers.yaml
panda/launch/: gazebo.launch.py  panda_controller.launch.py
panda/models/aruco_marker_1/: model.config  model.sdf
panda/models/aruco_marker_1/materials/scripts/: aruco_marker_1.material
panda/src/: panda_node.cpp
panda/urdf/: camera.xacro  hand.xacro  panda.gazebo.xacro  panda_arm.urdf.xacro  panda_arm_hand.urdf.xacro  ros_control.xacro
panda/worlds/: aruco.world  calibration.world  empty.world
panda_moveit_config/: CMakeLists.txt  README.md  package.xml
panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.srdf  panda_moveit_controller_manager.launch.xml  sensors_3d.yaml
panda_moveit_config/launch/: demo.launch.py  demo_fake.launch.py  moveit_rviz.launch.py  moveit_test.launch.py  planning_context.launch.py  planning_pipeline.launch.xml  ros2_controllers.launch.py  spawn_controllers.launch.py
panda_moveit_config/rviz/: panda.rviz
panda_moveit_config/src/: moveit_test.cpp
