<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format_3.xsd" schematypens="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>moveit_control</name>
  <version>0.0.1</version>
  <description>MoveIt graphical control interface for Panda robot arm (C++ / Qt5)</description>
  <maintainer email="test@todo.todo">test</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>libqt5widgets5</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>