<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format_3.xsd" schematypens="http://www.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>panda</name>
  <version>0.0.0</version>
  <description>ROS2 package for Franka Emika Panda robot simulation in Gazebo.
    Contains URDF description, meshes, and launch files for Gazebo simulation.</description>
  <maintainer email="test@todo.todo">test</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>controller_manager</depend>
  <depend>ros2controlcli</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <exec_depend>gazebo_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
  </export>
</package>
