<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format_3.xsd" schematypens="http://www.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>panda_moveit_config</name>
  <version>0.0.0</version>
  <description>
    MoveIt 2 configuration for the Franka Emika Panda arm (ROS 2 Foxy).
    Provides SRDF, kinematics, joint limits, OMPL planning, controllers
    and launch files so that MoveIt can plan and execute trajectories
    on the Panda simulated in Gazebo.
  </description>
  <maintainer email="test@todo.todo">test</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>panda</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
